<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF650205">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <imageList.ImageViewURL
        android:id="@+id/firstImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/food1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstImage">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/title"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">
            <LinearLayout
                android:id="@+id/star_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <!--<ImageView-->
                    <!--android:id="@+id/star1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:scaleType="fitEnd"-->

                    <!--android:src="@drawable/star" />-->

            </LinearLayout>
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:textColor="#808080"/>

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#808080" />
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/writer"
                    android:textColor="#CCCCCC" />

                <TextView
                    android:id="@+id/detail_writer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="#CCCCCC" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/restaurant"
                    android:textColor="#CCCCCC" />

                <TextView
                    android:id="@+id/detail_shopName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="#CCCCCC" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/address"
                    android:textColor="#CCCCCC" />

                <TextView
                    android:id="@+id/detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="#CCCCCC" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/contact"
                    android:textColor="#CCCCCC" />

                <TextView
                    android:id="@+id/detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text=""
                    android:textColor="#CCCCCC" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/tags"
                    android:textColor="#CCCCCC" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="20dp">

                <common.FlowLayout
                    android:id="@+id/tag_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                </common.FlowLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/takePhoto"
                    android:textColor="#CCCCCC" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <common.FlowLayout
        android:id="@+id/photo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </common.FlowLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2px"-->
        <!--android:background="#FFFFFFFF"-->

        <!-->-->

    <!--</View>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logologo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:scaleType="fitStart"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="www.imfull.com"
            android:layout_centerVertical="true"
            android:textColor="#808080"/>
    </RelativeLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
